refactor browser interface and implementation of new browser
this version is non-functional, as the old browser needs to follow the refactorings and implement the new protocols.

--- a/Vienna/Interfaces/Base.lproj/MainWindowController.xib
+++ b/Vienna/Interfaces/Base.lproj/MainWindowController.xib
@@ -769,7 +769,7 @@
             </connections>
             <point key="canvasLocation" x="1066" y="109"/>
         </customView>
-        <customObject id="eqp-AV-PHe" customClass="Browser">
+        <customObject id="eqp-AV-PHe" customClass="WebViewBrowser">
             <connections>
                 <outlet property="tabBarControl" destination="1238" id="2lB-oh-lMb"/>
                 <outlet property="tabBarHeightConstraint" destination="dYp-Gl-QZR" id="t6o-1h-aGO"/>
