--- a/Vienna/Sources/Main window/WebViewBrowser.xib
+++ b/Vienna/Sources/Main window/WebViewBrowser.xib
@@ -1,48 +1,49 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="17701" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14460.31"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="17701"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="WebViewBrowser">
             <connections>
-                <outlet property="tabBarControl" destination="vnF-Ff-Ntd" id="A80-dY-Klj"/>
-                <outlet property="view" destination="c22-O7-iKe" id="Wco-1l-CZn"/>
+                <outlet property="tabBarControl" destination="NQ9-WY-Cbm" id="iHy-Wx-nkx"/>
+                <outlet property="view" destination="Hz6-mo-xeY" id="0bl-1N-x8E"/>
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <customView id="c22-O7-iKe">
-            <rect key="frame" x="0.0" y="0.0" width="480" height="272"/>
+        <customView id="Hz6-mo-xeY">
+            <rect key="frame" x="0.0" y="0.0" width="622" height="383"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <customView verticalHuggingPriority="255" verticalCompressionResistancePriority="755" placeholderIntrinsicWidth="infinite" placeholderIntrinsicHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="vnF-Ff-Ntd" customClass="MMTabBarView">
-                    <rect key="frame" x="0.0" y="250" width="480" height="22"/>
+                <customView horizontalHuggingPriority="750" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" verticalCompressionResistancePriority="300" placeholderIntrinsicWidth="infinite" placeholderIntrinsicHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="NQ9-WY-Cbm" customClass="MMTabBarView">
+                    <rect key="frame" x="0.0" y="355" width="622" height="28"/>
                     <connections>
-                        <outlet property="delegate" destination="-2" id="Gew-Gw-ivh"/>
-                        <outlet property="partnerView" destination="CRL-fJ-APK" id="lXy-2A-m1H"/>
-                        <outlet property="tabView" destination="CRL-fJ-APK" id="VTp-1C-L6f"/>
+                        <outlet property="delegate" destination="-2" id="N7U-Ul-9ts"/>
+                        <outlet property="partnerView" destination="tnb-vE-K05" id="jY2-p6-YWx"/>
+                        <outlet property="tabView" destination="tnb-vE-K05" id="vze-g7-tre"/>
                     </connections>
                 </customView>
-                <tabView drawsBackground="NO" type="noTabsNoBorder" translatesAutoresizingMaskIntoConstraints="NO" id="CRL-fJ-APK" userLabel="Tab View">
-                    <rect key="frame" x="0.0" y="0.0" width="480" height="250"/>
+                <tabView horizontalCompressionResistancePriority="751" type="noTabsNoBorder" translatesAutoresizingMaskIntoConstraints="NO" id="tnb-vE-K05">
+                    <rect key="frame" x="0.0" y="0.0" width="622" height="355"/>
                     <font key="font" metaFont="system"/>
                     <connections>
-                        <outlet property="delegate" destination="vnF-Ff-Ntd" id="Ret-fv-tJD"/>
+                        <outlet property="delegate" destination="NQ9-WY-Cbm" id="uzD-eS-JMk"/>
                     </connections>
                 </tabView>
             </subviews>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="vnF-Ff-Ntd" secondAttribute="trailing" id="4gZ-dP-q7a"/>
-                <constraint firstItem="vnF-Ff-Ntd" firstAttribute="top" secondItem="c22-O7-iKe" secondAttribute="top" id="7I1-Xl-17L"/>
-                <constraint firstItem="CRL-fJ-APK" firstAttribute="leading" secondItem="c22-O7-iKe" secondAttribute="leading" id="D7i-qi-zFL"/>
-                <constraint firstAttribute="trailing" secondItem="CRL-fJ-APK" secondAttribute="trailing" id="Rmr-2D-pc8"/>
-                <constraint firstItem="vnF-Ff-Ntd" firstAttribute="leading" secondItem="c22-O7-iKe" secondAttribute="leading" id="W5F-l3-zT6"/>
-                <constraint firstItem="CRL-fJ-APK" firstAttribute="top" secondItem="vnF-Ff-Ntd" secondAttribute="bottom" id="adZ-Ld-GX2"/>
-                <constraint firstAttribute="bottom" secondItem="CRL-fJ-APK" secondAttribute="bottom" id="wCy-kZ-1Tz"/>
+                <constraint firstItem="tnb-vE-K05" firstAttribute="top" secondItem="NQ9-WY-Cbm" secondAttribute="bottom" id="D9r-Eh-NO9"/>
+                <constraint firstItem="NQ9-WY-Cbm" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" id="N8S-uy-S4O"/>
+                <constraint firstItem="tnb-vE-K05" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" id="NiK-bN-uiv"/>
+                <constraint firstAttribute="trailing" secondItem="NQ9-WY-Cbm" secondAttribute="trailing" id="Qn4-O6-CN4"/>
+                <constraint firstItem="NQ9-WY-Cbm" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" id="im4-Wa-YbC"/>
+                <constraint firstAttribute="bottom" secondItem="tnb-vE-K05" secondAttribute="bottom" id="shx-LQ-GFs"/>
+                <constraint firstAttribute="trailing" secondItem="tnb-vE-K05" secondAttribute="trailing" id="tNZ-Qs-8Ep"/>
             </constraints>
+            <point key="canvasLocation" x="210" y="209.5"/>
         </customView>
     </objects>
 </document>
