Fix image overflow with certain feeds
Images or illustrations in some RSS feeds did not respect the max-width:
CSS property set in Vienna styles. Ex: https://blog.substack.com/feed

Github issue #1428

--- a/Vienna/SharedSupport/Styles/Perlucida.viennastyle/stylesheet.css
+++ b/Vienna/SharedSupport/Styles/Perlucida.viennastyle/stylesheet.css
@@ -97,7 +97,7 @@ body {
 	textarea, input,
 	iframe, object,
 	embed, video {
-	  max-width: 100%;
+	  max-width: 100% !important;
 	}
 
 	/* specific direction for code */
