--- a/Vienna/SharedSupport/Styles/Xcast.viennastyle/stylesheet.css
+++ b/Vienna/SharedSupport/Styles/Xcast.viennastyle/stylesheet.css
@@ -42,7 +42,7 @@ code, pre,
 textarea, input,
 iframe, object,
 embed, video {
-  max-width: 100%;
+  max-width: 100% !important;
 }
 
 /* specific direction for code */
