--- a/Vienna/SharedSupport/Styles/Serifim.viennastyle/stylesheet.css
+++ b/Vienna/SharedSupport/Styles/Serifim.viennastyle/stylesheet.css
@@ -165,7 +165,7 @@ code, pre,
 textarea, input,
 iframe, object,
 embed, video {
-  max-width: 100%;
+  max-width: 100% !important;
 }
 
 /* specific direction for code */
